# OPENGL-render

./: CMakeLists.txt
assets/shaders/: basic.glsl
include/: stb_image.h
include/glad/: gl.h
src/: main.cpp
src/shader/: Shader.cpp  Shader.h  ShaderParser.cpp  ShaderParser.h
